--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^4.6.0",
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "markdown-it": "^12.3.2",
@@ -41,7 +41,7 @@
     "typescript": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
