--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-image-lightbox": "^5.1.4",
     "react-intl": "^5.20.2",
     "react-markdown-editor-lite": "^1.3.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "react-select": "^5.2.1",
+    "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
